Finished the whole website

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <p>Welcome to our Feature Display page. This project showcases unique and creative feature layouts designed with CSS. Navigate through the features to explore different layouts and animations that enhance the visual appeal of the content.</p>
     </section>
     <div class="image-container">
-        <img src="" alt="Landing Image">
+        <img src="./assets/img/feature.png" alt="Landing Image">
     </div>
     <nav>
         <ul>
-            <li><a href="feature1.html">Feature 1</a></li>
-            <li><a href="feature2.html">Feature 2</a></li>
+            <li><a href="./pages/featurepage1/index.html">Feature 1</a></li>
+            <li><a href="./pages/featurepage2/index.html">Feature 2</a></li>
         </ul>
     </nav>
     <footer>
