--- a/pages/featurepage2/index.html
+++ b/pages/featurepage2/index.html
@@ -35,7 +35,7 @@
     </section>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="../featurepage1/index.html">Feature 1</a></li>
         </ul>
     </nav>
