--- a/pages/featurepage1/index.html
+++ b/pages/featurepage1/index.html
@@ -34,7 +34,7 @@
     </section>
     <nav>
         <ul>
-            <li><a href="JMsoflo/WD-Seatwork-4-TC03/index.html">Home</a></li>
+            <li><a href="./index.html/">Home</a></li>
             <li><a href="../featurepage2/index.html">Feature 2</a></li>
         </ul>
     </nav>
