fix and renewed the feature pages

--- a/pages/featurepage1/index.html
+++ b/pages/featurepage1/index.html
@@ -3,40 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top 5 Anime</title>
+    <title>Product Feature</title>
     <link rel="stylesheet" href="../featurepage1/assets/css/style.css">
 </head>
 <body>
     <header>
-        <h1>Top 5 Anime I Love to Watch</h1>
+        <div class="hero">
+            <div class="hero-content">
+                <h1>Iphone 15 Pro Max Series</h1>
+            </div>
+        </div>
     </header>
-    <section class="anime-list">
-        <div class="anime-item">
-            <img src="../featurepage1/assets/img/one-piece.jpg" alt="Anime 1">
-            <p>One Piece</p>
+    <section class="product-feature">
+        <div class="feature-item">
+            <div class="feature-image-container">
+                <img src="../featurepage1/img/telephoto.jpg" alt="Product Image">
+            </div>
+            <div class="feature-description">
+                <h2>New Telephoto Lens</h2>
+                <p>120mm 5x Telephoto Lens: The iPhone 15 Pro Max features a 5x 120mm telephoto lens, providing more reach and creative photography options. Improved Night Mode: The Night mode feature has been enhanced for better low-light photography.</p>
+            </div>
         </div>
-        <div class="anime-item">
-            <img src="../featurepage1/assets/img/jujutsu-kaisen.jpg" alt="Anime 2">
-            <p>Jujutsu Kaisen</p>
+        <div class="feature-item">
+            <div class="feature-image-container">
+                <img src="../featurepage1/img/action-button.png" alt="Product Image">
+            </div>
+            <div class="feature-description">
+                <h2>Action Button</h2>
+                <p>The Action Button is perhaps the biggest hardware upgrade the iPhone line has received in years. It’s not a particularly advanced piece of technology , but its programmability lets you use your iPhone in completely new ways.</p>
+            </div>
         </div>
-        <div class="anime-item">
-            <img src="../featurepage1/assets/img/dragon-balls.jpg" alt="Anime 3">
-            <p>Dragon Balls</p>
-        </div>
-        <div class="anime-item">
-            <img src="../featurepage1/assets/img/black-clover.jpg" alt="Anime 4">
-            <p>Black Clover</p>
-        </div>
-        <div class="anime-item">
-            <img src="../featurepage1/assets/img/demon-slayer.jpg" alt="Anime 5">
-            <p>Demon Slayer</p>
+        <div class="feature-item">
+            <div class="feature-image-container">
+                <img src="../featurepage1/img/type-c.jpg" alt="Product Image">
+            </div>
+            <div class="feature-description">
+                <h2>Type C Cable</h2>
+                <p>You can charge your iPhone with a USB-C cable and power adapter compliant with the USB-C standard, including USB Power Delivery such as the cable that comes with your iPhone. These cables and power adapters are widely available from Apple and other manufacturers.</p>
+            </div>
         </div>
     </section>
     <nav>
         <ul>
-            <li><a href="./index.html/">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="../featurepage2/index.html">Feature 2</a></li>
         </ul>
     </nav>
 </body>
 </html>
+
