--- a/pages/featurepage2/index.html
+++ b/pages/featurepage2/index.html
@@ -3,41 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Top 3 Hobbies</title>
+    <title>Product Showcase</title>
     <link rel="stylesheet" href="../featurepage2/assets/css/style.css">
 </head>
 <body>
-    <header>
-        <h1>My Top 3 Hobbies</h1>
+    <header class="hero">
+        <div class="hero-content">
+            <h1>Endgame Gear OP1 8K</h1>
+            
+        </div>
     </header>
-    <section class="hobby-list">
-        <div class="hobby-item">
-            <img src="../featurepage2/assets/img/playing-pc-games.jpg" alt="Hobby 1">
-            <div class="hobby-description">
-                <h2>Playing Computer Games</h2>
-                <p>Ever since I was a teenager I was already in to gaming and I always wanted and enjoy playing computer games it is my way of relieving stress over the day</p>
+
+    <section class="product-feature">
+        <div class="feature-item">
+            <div class="feature-image-container">
+                <img src="../featurepage2/assets/img/click-latency.JPG" alt="Feature 1">
+            </div>
+            <div class="feature-description">
+                <h2>Click Latency</h2>
+                <p>The Endgame Gear OP1 8k has exceptionally low and consistent click latency, providing an extremely responsive in-game experience for gaming in any genre. In the image it shows a test wherein the click latency is at 0.077 micro seconds.</p>
             </div>
         </div>
-        <div class="hobby-item">
-            <img src="../featurepage2/assets/img/gym.jpeg" alt="Hobby 2">
-            <div class="hobby-description">
-                <h2>Working Out in the gym</h2>
-                <p> Going to the gym is my second best hobby wherein I exercise just to keep me healthy and also stay in shape. Exercising in the gym also helps me through my stress where I enjoy lifting weights every 2-3 times a week </p>
+        <div class="feature-item">
+            <div class="feature-image-container">
+                <img src="../featurepage2/assets/img/8khz.JPG" alt="Feature 2">
+            </div>
+            <div class="feature-description">
+                <h2>8k Hz Polling Rate</h2>
+                <p>Even though 8000 Hz polling can even be found on wireless mice these days, there are still good reasons to opt for a wired 8000 Hz mouse instead. For one, battery life is not a concern, and the connection will invariably be more stable as well. </p>
             </div>
         </div>
-        <div class="hobby-item">
-            <img src="../featurepage2/assets/img/basketball.jpeg" alt="Hobby 3">
-            <div class="hobby-description">
-                <h2>Basketball</h2>
-                <p>I enjoy this hobby because ever since I was a child I already play basketball and enjoy every game that I play. But ever since I got an injury during my highschool days that never stop me from playing my favorite sport.</p>
+        <div class="feature-item">
+            <div class="feature-image-container">
+                <img src="../featurepage2/assets/img/weight.JPG" alt="Feature 3">
+            </div>
+            <div class="feature-description">
+                <h2>Weight</h2>
+                <p>This mouse is remarkably lightweight,with a weight of 49 grams and the weight is well-centered, making it easy to move quickly and accurately.</p>
             </div>
         </div>
     </section>
-    <nav>
-        <ul>
-            <li><a href="./index.html/">Home</a></li>
-            <li><a href="../featurepage1/index.html">Feature 1</a></li>
-        </ul>
-    </nav>
+    <footer>
+        <nav>
+            <ul>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="../featurepage1/index.html">Feature 1</a></li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 </html>
