--- a/pages/featurepage2/index.html
+++ b/pages/featurepage2/index.html
@@ -46,7 +46,7 @@
     <footer>
         <nav>
             <ul>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="../../index.html">Home</a></li>
                 <li><a href="../featurepage1/index.html">Feature 1</a></li>
             </ul>
         </nav>
